Update index.html change the profile figure

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         padding: 100% 0 0;
         background-color: #ccc;
       ">
-<img src="profile linked in.jpeg" , srcset="
+<img src="https://github.com/kyoheikondo-kc/profile/blob/68665d6f7e6bd391ce36fbe1db3d00be3922224f/profile%20linked%20in.jpeg" , srcset="
           https://assets.owlstown.net/assets/profiles/default-medium-fac4178e3395498fa9427c6e60161ff6c2fbb924dcf0f224ad942581a27d8185.png 1x,
           https://assets.owlstown.net/assets/profiles/default-large-ab13ca739c1b7205df8838c7cbcbc188ffd753d6dfe26aefdd20f125c3163436.png 2x
         " style="object-fit: cover; position: absolute; inset: 0; width: 100%; height: 100%;" />
